--- a/src/app/components/attribute/add-attribute/add-attribute.component.html
+++ b/src/app/components/attribute/add-attribute/add-attribute.component.html
@@ -1,176 +1,127 @@
 <div class="container-fluid">
   <h2><i class="bi bi-bar-chart"></i> Add Attribute</h2>
-  <i class="bi bi-columns"></i>
   <span class="text-primary d-inline-flex focus-ring py-1 px-2 text-decoration-none">
-  {{ this.toString(this.addAttributeFrom.controls.id.value) }}</span>
-  <form [formGroup]="addAttributeFrom" (ngSubmit)="submitForm()" class="needs-validation" novalidate>
-    <div class="row g-3">
-      <h4>Attribute object</h4>
-      <div class="col border">
-        <div class="row g-3">
-          <div class="col">
-            <div class="form-group">
-              <label for="deviceId" class="form-label">Device</label>
-              <select (change)="changeDeviceId($event)" formControlName="deviceId" [ngClass]="{
-                  'is-invalid': addAttributeFrom.hasError('atLeastOneValidator'),
-                  'is-valid': !addAttributeFrom.hasError('atLeastOneValidator'),
-                  'form-select': true,
-                }" id="deviceId">
-                @for (deviceObj of deviceDictionary; track deviceObj; let i = $index) {
-                  <option value="{{ deviceObj._id }}">
-                    {{ deviceObj.name }}
-                  </option>
-                }
-              </select>
-              @if (addAttributeFrom.hasError('atLeastOneValidator')) {
-                <div class="error-message">
-                  One of field: device, model or connection is required
-                </div>
-              }
-              <div class="log-message">
-                {{ this.toString(this.addAttributeFrom.controls.deviceId.value) }}
-              </div>
+    <form [formGroup]="addAttributeForm" (ngSubmit)="submitForm()" class="needs-validation" novalidate>
+      <ng-template #atLeastOneError>
+        <div class="error-message text-danger">One of the fields: Device, Model, or Connection is required.</div>
+      </ng-template>
+      <div class="row g-3">
+        <div class="col border">
+
+          <div class="form-group mb-2">
+            <label for="deviceId" class="form-label">Device</label>
+            <select formControlName="deviceId" [ngClass]="{
+                    'is-invalid':
+                      addAttributeForm.hasError('atLeastOneValidator') && !addAttributeForm.controls.deviceId.value,
+                    'is-valid': addAttributeForm.controls.deviceId.value,
+                    'form-select': true,
+                  }" id="deviceId">
+              <option *ngFor="let deviceObj of deviceDictionary; let i = index; trackBy: trackDeviceObj"
+                [value]="deviceObj._id">
+                {{ deviceObj.name }}
+              </option>
+            </select>
+            <div class="log-message" *ngIf="debugMode">
+              {{ toString(addAttributeForm.controls.deviceId.value) }}
             </div>
-          </div>
-          <div class="col">
             <div class="form-group mb-2">
               <label for="modelId" class="form-label">Model</label>
-              <select (change)="changeModelId($event)" formControlName="modelId" [ngClass]="{
-                  'is-invalid': addAttributeFrom.hasError('atLeastOneValidator'),
-                  'is-valid': !addAttributeFrom.hasError('atLeastOneValidator'),
-                  'form-select': true,
-                }" id="modelId">
-                @for (modelObj of modelDictionary; track modelObj; let i = $index) {
-                  <option value="{{ modelObj._id }}">
-                    {{ modelObj.name }}
-                  </option>
-                }
+              <select formControlName="modelId" [ngClass]="{
+                      'is-invalid':
+                        addAttributeForm.hasError('atLeastOneValidator') && !addAttributeForm.controls.modelId.value,
+                      'is-valid': addAttributeForm.controls.modelId.value,
+                      'form-select': true,
+                    }" id="modelId">
+                <option *ngFor="let modelObj of modelDictionary; let i = index; trackBy: trackModelObj"
+                  [value]="modelObj._id">
+                  {{ modelObj.name }}
+                </option>
               </select>
-              @if (addAttributeFrom.hasError('atLeastOneValidator')) {
-                <div class="error-message">
-                  One of field: device, model or connection is required
-                </div>
-              }
-              <div class="log-message">
-                {{ this.toString(this.addAttributeFrom.controls.modelId.value) }}
+              <div class="log-message" *ngIf="debugMode">
+                {{ toString(addAttributeForm.controls.modelId.value) }}
               </div>
             </div>
-          </div>
-          <div class="col">
             <div class="form-group mb-2">
               <label for="connectionId" class="form-label">Connection</label>
-              <select (change)="changeConnectionId($event)" formControlName="connectionId" [ngClass]="{
-                  'is-invalid': addAttributeFrom.hasError('atLeastOneValidator'),
-                  'is-valid': !addAttributeFrom.hasError('atLeastOneValidator'),
-                  'form-select': true,
-                }" id="connectionId">
-                @for (connectionObj of connectionDictionary; track connectionObj; let i = $index) {
-                  <option
-                    value="{{ connectionObj._id }}">
-                    {{ connectionObj.name }}
-                  </option>
-                }
+              <select formControlName="connectionId" [ngClass]="{
+                      'is-invalid':
+                        addAttributeForm.hasError('atLeastOneValidator') &&
+                        !addAttributeForm.controls.connectionId.value,
+                      'is-valid': addAttributeForm.controls.connectionId.value,
+                      'form-select': true,
+                    }" id="connectionId">
+                <option
+                  *ngFor="let connectionObj of connectionDictionary; let i = index; trackBy: trackConnectionObj"
+                  [value]="connectionObj._id">
+                  {{ connectionObj.name }}
+                </option>
               </select>
-              @if (addAttributeFrom.hasError('atLeastOneValidator')) {
-                <div class="error-message">
-                  One of field: device, model or connection is required
-                </div>
-              }
-              <div class="log-message">
-                {{ this.toString(this.addAttributeFrom.controls.connectionId.value) }}
+              <div class="log-message" *ngIf="debugMode">
+                {{ toString(addAttributeForm.controls.connectionId.value) }}
               </div>
             </div>
+            <ng-container *ngIf="addAttributeForm.hasError('atLeastOneValidator')">
+              <ng-container *ngTemplateOutlet="atLeastOneError"></ng-container>
+            </ng-container>
           </div>
         </div>
-      </div>
-      <div class="col">
         <div class="form-group mb-2">
-          <label for="attributeDictionaryId" class="form-label">Attribute Dictionary Id</label>
-          <select (change)="changeAttributeDictionaryId($event)" formControlName="attributeDictionaryId"
-            formControlName="attributeDictionaryId" [ngClass]="{
-              'is-invalid': this.addAttributeFrom.controls.attributeDictionaryId.status !== 'VALID',
-              'is-valid': this.addAttributeFrom.controls.attributeDictionaryId.status === 'VALID',
-              'form-select': true,
-            }" id="attributeDictionaryId">
-            @for (attributeDictionaryObj of attributeDictionary; track attributeDictionaryObj; let i = $index) {
-              <option
-                value="{{ attributeDictionaryObj._id }}">
-                {{ attributeDictionaryObj.name }}
-              </option>
-            }
+          <label for="attributeDictionaryId" class="form-label">Attribute Dictionary</label>
+          <select formControlName="attributeDictionaryId" [ngClass]="{
+                      'is-invalid': addAttributeForm.controls.attributeDictionaryId.status !== 'VALID',
+                      'is-valid': addAttributeForm.controls.attributeDictionaryId.status === 'VALID',
+                      'form-select': true,
+                    }" id="attributeDictionaryId">
+            <option *ngFor="
+                        let attributeDictionaryObj of attributeDictionary;
+                        let i = index;
+                        trackBy: trackAttributeDictionaryObj
+                      " [value]="attributeDictionaryObj._id">
+              {{ attributeDictionaryObj.name }}
+            </option>
           </select>
-          @if (this.addAttributeFrom.controls.attributeDictionaryId.errors) {
-            <div class="invalid-feedback">
-              @if (this.addAttributeFrom.controls.attributeDictionaryId.errors.required) {
-                <div>
-                  attributeDictionaryId is required
-                </div>
-              }
-            </div>
-          }
-          <div class="log-message">
-            {{ this.toString(this.addAttributeFrom.controls.attributeDictionaryId) }}
+          <div class="invalid-feedback" *ngIf="addAttributeForm.controls.attributeDictionaryId.errors?.required">
+            attributeDictionaryId is required
+          </div>
+          <div class="log-message" *ngIf="debugMode">
+            {{ toString(addAttributeForm.controls.attributeDictionaryId.value) }}
           </div>
         </div>
-      </div>
-    </div>
-    <div class="row">
-      <div class="col">
+
         <div class="form-group mb-2">
           <label for="value" class="form-label">Value</label>
           <input type="text" formControlName="value" class="form-control" id="value" aria-label="value" required
             [ngClass]="{
-              'is-invalid': this.addAttributeFrom.controls.value.status !== 'VALID',
-              'is-valid': this.addAttributeFrom.controls.value.status === 'VALID',
-              'form-control': true,
-            }" />
-          <div class="invalid-feedback">Please select a valid state.</div>
-          @if (this.addAttributeFrom.controls.value.errors) {
-            <div class="invalid-feedback">
-              @if (this.addAttributeFrom.controls.value.errors.required) {
-                <div>Value is required</div>
-              }
-              @if (this.addAttributeFrom.controls.value.errors.minlength) {
-                <div>
-                  Value must be at least 250 characters
-                </div>
-              }
-            </div>
-          }
+                    'is-invalid': addAttributeForm.controls.value.status !== 'VALID',
+                    'is-valid': addAttributeForm.controls.value.status === 'VALID',
+                    'form-control': true,
+                  }" />
+          <div class="invalid-feedback" *ngIf="addAttributeForm.controls.value.errors?.required">
+            Value is required
+          </div>
+          <div class="invalid-feedback" *ngIf="addAttributeForm.controls.value.errors?.minlength">
+            Value must be at least 250 characters
+          </div>
+          <div class="log-message" *ngIf="debugMode">
+            {{ toString(addAttributeForm.controls.value.value) }}
+          </div>
         </div>
-      </div>
-    </div>
-    <div class="row">
-      <div class="col">
-        <div class="form-group mb-3">
-          <button type="submit" [disabled]="!(this.addAttributeFrom.valid && this.addAttributeFrom.touched)"
-            class="btn btn-primary">
-            Add attribute
+        <div class="form-group mb-3 p-2">
+          <button type="submit" class="btn btn-primary me-2" [disabled]="addAttributeForm.invalid"
+            [attr.aria-disabled]="addAttributeForm.invalid">
+            <i class="bi bi-plus-circle"></i> Add Attribute
           </button>
-
-          <button type="button" (click)="generateAttributeDictionary()" class="btn btn-debug">
+          <button type="button" (click)="generateAttributeDictionary()" class="btn btn-secondary">
             <i class="bi bi-bookmark-plus"></i> Generate random data
           </button>
-
-          @if (!(this.addAttributeFrom.valid && this.addAttributeFrom.touched)) {
-            <div>Form is invalid</div>
-          }
-          @if (addAttributeFrom.hasError('atLeastOneValidator')) {
-            <span class="text-danger">
-              Fill one of Device, Model or Connection first.
-            </span>
-          }
-          @if (!(this.addAttributeFrom.valid && this.addAttributeFrom.touched)) {
-            <div class="invalid-feedback">
-              Form is invalid
-            </div>
-          }
-          <!-- <div class="log-message">atLeastOneValidator: {{ addAttributeFrom.hasError('atLeastOneValidator') }}</div>
-          <div class="log-message">addAttributeFrom.value: {{ toString(addAttributeFrom.value) }}</div>
-          <div class="log-message">addAttributeFrom.valid: {{ toString(this.addAttributeFrom.valid) }}</div>
-          <div class="log-message">addAttributeFrom.touched: {{ toString(this.addAttributeFrom.touched) }}</div> -->
+          <div class="invalid-feedback" *ngIf="!addAttributeForm.valid
+                      && !addAttributeForm.controls.attributeDictionaryId.errors
+                      && !addAttributeForm.controls.value.errors
+                      && !addAttributeForm.hasError('atLeastOneValidator')">
+            Form is invalid
+          </div>
         </div>
       </div>
-    </div>
-  </form>
+    </form>
+  </span>
 </div>
