--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -9,10 +9,11 @@
 <h2 class="text-2xl font-bold text-center my-4">Issues</h2>
 <div class="container mx-auto p-4 bg-gray-100 text-gray-600">
   <ul>
-    <li *ngFor="let issue of issues"><img [src]="issue.user.avatar_url" alt="avatar" width="32" height="32"
+    <li *ngFor="let issue of issues"><img [src]="issue.user?.avatar_url" alt="avatar" width="32" height="32"
         style="border-radius:50%;vertical-align:middle;margin-right:8px;"><strong><a
           href="{{ issue.html_url }}">#{{ issue.number }}</a></strong> {{
-      issue.title }} By: <a href="{{ issue.user.html_url }}">{{ issue.user.login }}</a> | Status: {{ issue.state }}
+      issue.title }} By: <a href="{{ issue.user?.html_url }}">{{ issue.user?.login }}</a> | Status: {{ issue.state
+      }}
     </li>
   </ul>
 </div>
