--- a/src/app/components/attribute-dictionary/add-attribute-dictionary/add-attribute-dictionary.component.html
+++ b/src/app/components/attribute-dictionary/add-attribute-dictionary/add-attribute-dictionary.component.html
@@ -134,9 +134,15 @@
         </div>
       </div>
       <div class="form-group mb-3">
-        <button type="submit" [disabled]="isFormInvalid" class="btn btn-primary">
+        <button type="submit" [disabled]="isFormInvalid" class="btn btn-primary me-2">
           Add Attribute Dictionary
         </button>
+        <button type="button" class="btn btn-secondary me-2" (click)="debugAuth()">
+          Debug Auth
+        </button>
+        <a href="/assets/debug-auth.html" target="_blank" class="btn btn-info">
+          Open Debug Tool
+        </a>
         @if (isFormInvalid) {
         <div class="form-error-message">
           Form is invalid
